kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: financial-portfolio
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: flask-service
            port:
              number: 5050
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-service
            port:
              number: 3001
